# tts

./: .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.yml  examples.py  install.sh  requirements.txt  restart.sh  run.sh
app/: auth.py  config.py  lms_proxy.py  main.py
app/models/: manager.py  schemas.py
app/routers/: archive.py  base.py  custom_voice.py  debate.py  engine.py  health.py  model_lab.py  story.py  voice_design.py
app/services/: c_tts.py  lm_studio.py  session_store.py  story_model_runtime.py  story_pipeline.py
app/utils/: audio.py  caching.py  emotion_tags.py  metrics.py  streaming.py
docs/testing/: real-model-test-report.md  test-suite-summary.md  test-verification-report.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
lmstudio-plugin/: manifest.json  package-lock.json  package.json
lmstudio-plugin/src/: toolsProvider.ts
rust-engine/: Cargo.toml
rust-engine/crates/qwen3-tts-core/: Cargo.toml
rust-engine/crates/qwen3-tts-core/src/: backend.rs  lib.rs  markup.rs  request.rs
rust-engine/crates/qwen3-tts-server/: Cargo.toml
rust-engine/crates/qwen3-tts-server/src/: audio_layers.rs  main.rs  reference.rs
scripts/: smoke-rust-story-debate.sh
scripts/setup/: debate-models.sh  story-models.sh
setup/: beam.sh  lmstudio.sh  rust-engine.sh  story-models.sh  test-user.sh  tts-engine.sh
tests/: README.md  conftest.py  test_story_model_runtime.py  test_story_pipeline.py  utils.py
tests/e2e/: test_complete_workflows.py  test_performance.py
tests/fixtures/: generate_fixtures.py
tests/integration/: test_base_api.py  test_custom_voice_api.py  test_preprocessing_integration.py  (+1 more)
(+51 files in other folders)
