[package]
name = "qwen3-tts-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-core.workspace = true
serde_json.workspace = true
